--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,22 @@
 		<version>1.2.4.RELEASE</version>
 	</parent>
 
-	<!-- Add typical dependencies for a web application -->
 	<dependencies>
+		<!-- Add typical dependencies for a web application -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!-- Add typical dependencies for a jpa application -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
@@ -31,4 +42,8 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
 </project>
