--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 app.env=dev
 app.env.info=application is running in ${app.env} mode
+
+info.build.group=@project.groupId@
+info.build.artifact=@project.artifactId@
+info.build.name=@project.name@
+info.build.description=@project.description@
+info.build.version=@project.version@
+
+management.context-path=/manage
+management.port=8081
+management.security.enabled=false
