--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 		<!-- Add typical dependencies for a Undertow server -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
