--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ info.build.version=@project.version@
 management.context-path=/manage
 management.port=8081
 management.security.enabled=false
+
+security.user.name=admin
+security.user.password=12345678
+management.security.role=SUPERUSER
