--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ info.build.name=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
 
+server.contextPath=/
+
 management.context-path=/manage
 management.port=8081
 management.security.enabled=false
