--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ info.build.name=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
 
-server.contextPath=/
+server.contextPath=
 
 management.context-path=/manage
 management.port=8081
